# NewsAnalyzer

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml
audit/: feedback_report.py  inspect_json.sql  taste_probe.py  week1_audit.sql  week1_samples.sql
config/: sources.yaml
config/profiles/: volodymyr.yaml
delivery/: __init__.py  __main__.py  client.py  discussion.py  dispatcher.py  formatter.py  keyboards.py  research.py
delivery/listener/: __init__.py  __main__.py  handlers.py  service.py
docs/: commercial.md
engine/: __main__.py  _retry.py  config.py  db.py  domain.py  models.py  observability.py  pipeline.py  profile.py
engine/cli/: _duration.py  _output.py  cluster.py  cost.py  digests.py  embed.py  events.py  fetch.py  filter.py  ingest.py  inspect.py  run.py  score.py  sources.py  summarize.py  verify.py
engine/llm/: client.py  embeddings.py  schemas.py
engine/ranking/: __init__.py  taste.py
engine/search/: __init__.py  tavily.py
engine/sources/: _state.py  base.py  html.py  registry.py  rss.py  telegram.py
engine/stages/: _event_context.py  base.py  cluster.py  embed.py  filter_rules.py  ingest.py  (+3 more)
migrations/: env.py
tests/: conftest.py  test_cluster.py  test_cost.py  test_db.py  test_delivery.py  test_digests_cli.py  test_embed.py  test_importability.py  test_ingest.py  test_inspect.py  test_keyword_filter.py  test_llm_client.py  test_pipeline.py  test_profile.py  test_relevance.py  test_rss.py  test_sources.py  test_stages_base.py  test_summarize.py  test_verify.py
(+34 files in other folders)
